--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         <![endif]-->
 
     <section class="wrapper">
+        <header>
+            <h1>Hi! I'm Georgiana!</h1>
+        </header>
+
+        <main>
+            <p>I am a <span>Responsive Web Developer</span> who endeavours to create reliable and high-performing
+                websites
+                that meet and exceed clients' expectations. When I am not working on projects, I am either immersing
+                myself
+                in books or I am tending my vegetable garden.</p>
+        </main>
+
         <div class="div-1">
             <p>I have always had this insatiable curiosity of finding the underlying processes of .. well, anything
                 really! What makes an engine work, what keeps the economy going, etc. So, why not explore what keeps the
@@ -38,8 +50,9 @@
                 but very
                 useful in any other country I lived or visited for the past 20 years. Go figure!</p>
         </div>
-    </section>  
-
+    </section>
+    <footer></footer>
+    <p>Contact</p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
